@@ -7,6 +7,10 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 
 ## [4.0.1] - 2022-03-14
 
+### Added
+
+- Status de Roleta `/status roleta`
+
 ### Changed
 - Dificuldade de subir de nível foi aumentado para `1.62`
 - Tempo de resposta da Dungeon foi aumentado para `20s`
@@ -14,6 +18,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 ### Fixed
 
 - Erros de português no comando `/ship`
+- O valor de lucro da roleta foi ajustado para todas apostas que duplicava o valor real.
 - Erros do RPG: Muitos erros aconteciam como 'Cannot read [0] of undefined'. Isso foi resolvido com um novo sistema de interações que, eu creio, que vão arrumar o problema, que era causado por lags entre a Menhera e o Discord
 
 ## [4.0.H-BETA] - 2022-03-01
